@@ -47,12 +47,17 @@
       
     <h3>Latest release</h3>
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.8/tomboy-0.8.0.tar.gz"
+      title="Source code of the latest stable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.8.0</a></div>
+
+    <h3>Past releases</h3>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.3.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.6.3</a></div>
-
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.6/tomboy-0.6.1.tar.gz"
       title="Source code of the 0.6.1 stable release">
@@ -79,33 +84,30 @@
       <a href="./getinvolved.html">Get involved</a> page.</p>
       
     <h3>Latest release</h3>
+
+      <p>There is currently no separate development release.</p>
+      
+    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.4.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.7.4</a></div>
-
-      <!--<p>There is currently no separate development release.</p>-->
-      
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.3.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.7.3</a></div>
-
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.2.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.7.2</a></div>
-
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.1.tar.gz"
       title="Source code of the 0.7.1 unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.7.1</a></div>
-
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.0.tar.gz"
       title="Source code of the 0.7.0 unstable release">
