@@ -70,6 +70,20 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    
+	    <h3>September 17th 2007</h3>
+   	      Stable version 0.8.0 released! New features since previous stable
+   	      version include:
+   	      <ul>
+		<li>Note synchronization with a central storage location.</li>
+		<li>Notes left open when Tomboy quits are re-opened at startup.</li>
+		<li>New colors from the Tango palette.</li>
+		<li>Use GNOME Document Font by default.</li>
+		<li>Much expanded and improved DBUS interface.</li>
+		<li>Plugin infrastructure revamped to use Mono.Addins.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_8_0/NEWS?view=markup">more</a></li>
+   	      </ul>
+   	      <a href="download.html">Download it</a>
 
 	    <h3>August 13th 2007</h3>
    	      <b>Unstable</b> version 0.7.4 released!  New in this release:
