@@ -1,5 +1,10 @@
 2007-08-13  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
+	* index.html: Updated for 0.8.0 release.
+	* download.html: Ditto.
+
+2007-08-13  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
 	* index.html: Updated for 0.7.4 release.
 	* download.html: Ditto.
 
